<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_welcome">

    <fragment
        android:id="@+id/navigation_welcome"
        android:name="com.technoqueue.ui.fragments.WelcomeFragment"
        android:label="@string/title_welcome"
        tools:layout="@layout/fragment_welcome" />

    <fragment
        android:id="@+id/navigation_menu"
        android:name="com.technoqueue.ui.fragments.MenuFragment"
        android:label="@string/title_menu"
        tools:layout="@layout/fragment_menu" />

    <fragment
        android:id="@+id/navigation_orders"
        android:name="com.technoqueue.ui.fragments.OrdersFragment"
        android:label="@string/title_orders"
        tools:layout="@layout/fragment_orders" />

    <fragment
        android:id="@+id/navigation_sold_products"
        android:name="com.technoqueue.ui.fragments.SoldProductsFragment"
        android:label="@string/title_sold_products"
        tools:layout="@layout/fragment_sold_products" />
</navigation>